# ocr4all-ajax-client

./: .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt  template.env
docker/: docker-compose.yml
ocr4all_ajax_client/: __init__.py  logger.py  ocr4all_ajax_utils.py
