[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr4all-ajax-client"
version = "0.1.0"
description = "Unofficial Python client for automating OCR4all via its internal AJAX endpoints."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Alexander Esser"}]
dependencies = [
  "requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/alexander-esser/ocr4all-ajax-client"
Issues = "https://github.com/alexander-esser/ocr4all-ajax-client/issues"
